<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:layout_centerHorizontal="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="match_parent"
            android:background="@drawable/bg_btn_delete"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="40dp"/>
        <LinearLayout
            android:id="@+id/Space"
            android:layout_width="0dp"
            android:layout_weight=".03"
            android:layout_height="match_parent"
            android:background="#33475b"
            android:orientation="horizontal"/>
        <RelativeLayout
            android:id="@+id/container_box"
            android:layout_width="0dp"
            android:layout_weight=".77"
            android:background="@drawable/row_inner_border"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/ConatinerTop"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="1dp"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/row_inner_border"
                    android:textColor="#979797"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="right|center"
                    android:text="@string/empty"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ConatinerBottom"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_below="@+id/ConatinerTop"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/item_number"
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="match_parent"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:background="@drawable/row_inner_border"
                    android:maxLength="6"
                    android:gravity="center"
                    android:text="@string/counter"/>
                <TextView
                    android:id="@+id/ItemText"
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="match_parent"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/net_coast_title"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
