<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33475b">
    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/RelativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/Container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_container">
                <RelativeLayout
                    android:id="@+id/logo_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/logo_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/logo_title"/>
                    <LinearLayout
                        android:id="@+id/wall_logo"
                        android:layout_width="2dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:background="#00cb00"
                        android:layout_toLeftOf="@+id/logo_title"
                        android:orientation="horizontal"/>
                    <Button
                        android:id="@+id/choose_logo"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/ripple_effect"
                        android:layout_marginLeft="10dp"
                        android:text="@string/choose_logo"
                        android:textSize="20dp"
                        android:textColor="#fff"
                        android:layout_toLeftOf="@+id/wall_logo"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/logo_container"
                    android:layout_below="@+id/logo_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/logo_dimensions_tit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:text="@string/logo_dimensions_tit"/>
                        <RelativeLayout
                            android:id="@+id/logo_dimens"
                            android:layout_below="@+id/logo_dimensions_tit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:background="@drawable/logo_dimns_bg"
                            android:padding="5dp">
                            <ImageView
                                android:id="@+id/rec_hor"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:text="Default Network Info"
                                android:contentDescription="img"
                                android:layout_toLeftOf="@+id/rec_ver"
                                android:layout_marginRight="20dp"
                                android:src="@drawable/rec_h_off"/>
                            <ImageView
                                android:id="@+id/rec_ver"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:text="Default Network Info"
                                android:contentDescription="img"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/rec_v_off"/>
                            <ImageView
                                android:id="@+id/square"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:text="Default Network Info"
                                android:contentDescription="img"
                                android:layout_marginLeft="20dp"
                                android:layout_toRightOf="@+id/rec_ver"
                                android:src="@drawable/square_off"/>
                        </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/extract_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo_container"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:id="@+id/extract_num_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/extract_num_title"/>
                    <LinearLayout
                        android:id="@+id/wall_extract_num"
                        android:layout_width="2dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:background="#1abc9c"
                        android:layout_toLeftOf="@+id/extract_num_title"
                        android:orientation="horizontal"/>
                    <EditText
                        android:id="@+id/extract_num_edit"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_bg"
                        android:layout_marginLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textSize="20dp"
                        android:hint="ادخل الرقم"
                        android:gravity="right|center"
                        android:layout_toLeftOf="@+id/wall_extract_num"
                        android:inputType="number"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/to_gentleman_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:layout_below="@+id/extract_num"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/to_gentleman_title"/>
                <LinearLayout
                    android:id="@+id/wall_to_gentleman"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#1abc9c"
                    android:layout_below="@+id/to_gentleman_title"
                    android:orientation="horizontal"/>
                <EditText
                    android:id="@+id/to_gentleman_edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="20dp"
                    android:hint="ادخل الاسم"
                    android:gravity="right|center"
                    android:layout_below="@+id/wall_to_gentleman"
                    android:inputType="text"/>
                <TextView
                    android:id="@+id/operation_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:layout_below="@+id/to_gentleman_edit"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/operation_title"/>
                <LinearLayout
                    android:id="@+id/wall_operation"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#1abc9c"
                    android:layout_below="@+id/operation_title"
                    android:orientation="horizontal"/>
                <EditText
                    android:id="@+id/operation_edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="20dp"
                    android:hint="ادخل العملية"
                    android:gravity="right|center"
                    android:layout_below="@+id/wall_operation"
                    android:inputType="text"/>
                <TextView
                    android:id="@+id/about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:layout_below="@+id/operation_edit"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/about_title"/>
                <LinearLayout
                    android:id="@+id/wall_about"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#1abc9c"
                    android:layout_below="@+id/about_title"
                    android:orientation="horizontal"/>
                <EditText
                    android:id="@+id/about_edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="20dp"
                    android:hint="ادخل المحتوى"
                    android:gravity="right|center"
                    android:layout_below="@+id/wall_about"
                    android:inputType="text"/>
                <TextView
                    android:id="@+id/attachments_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/about_edit"
                    android:layout_alignParentRight="true"
                    android:text="@string/attachments_title"/>
                <LinearLayout
                    android:id="@+id/wall_attachments"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#1abc9c"
                    android:layout_below="@+id/attachments_title"
                    android:orientation="horizontal"/>
                <EditText
                    android:id="@+id/attachments_edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="20dp"
                    android:hint="ادخل المرفقات"
                    android:gravity="right|center"
                    android:layout_below="@+id/wall_attachments"
                    android:inputType="text"/>
                <RelativeLayout
                    android:id="@+id/date_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/attachments_edit"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:id="@+id/date_from_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/from"/>
                    <LinearLayout
                        android:id="@+id/wall_from"
                        android:layout_width="2dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:background="#00cb00"
                        android:layout_toLeftOf="@+id/date_from_title"
                        android:orientation="horizontal"/>
                    <Button
                        android:id="@+id/from_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/ripple_effect"
                        android:textColor="#fff"
                        android:layout_marginLeft="10dp"
                        android:text="Select date"
                        android:textSize="20dp"
                        android:layout_toLeftOf="@+id/wall_from"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/date_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date_from"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/date_to_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/to"/>
                    <LinearLayout
                        android:id="@+id/wall_to"
                        android:layout_width="2dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:background="#00cb00"
                        android:layout_toLeftOf="@+id/date_to_title"
                        android:orientation="horizontal"/>
                    <Button
                        android:id="@+id/to_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/ripple_effect"
                        android:layout_marginLeft="10dp"
                        android:text="Select date"
                        android:textColor="#fff"
                        android:textSize="20dp"
                        android:layout_toLeftOf="@+id/wall_to"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
